build: added openapi generator
