# src/main/java/com/vass/challenge/catalog/infrastructure/api/rest/mapper/ProductPriceMapper.java
@@ -1,7 +1,7 @@
 package com.vass.challenge.catalog.infrastructure.api.rest.mapper;
 
-import com.vass.challenge.catalog.infrastructure.api.rest.responses.ProductPriceResponse;
 import com.vass.challenge.catalog.domain.models.ProductPrice;
+import com.vass.challenge.openapi.model.ProductPriceResponse;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
